--- a/env.example
+++ b/env.example
@@ -1,3 +1,6 @@
+# Site Configuration
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=your_supabase_anon_key
@@ -6,8 +9,18 @@ NEXT_PUBLIC_SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 # Database URL (for Drizzle)
 DATABASE_URL=postgresql://postgres:[password]@db.[project-ref].supabase.co:5432/postgres
 
-# Email Configuration (Resend)
-RESEND_API_KEY=your_resend_api_key
+
+
+NEXT_PUBLIC_NEON_DATABASE_URL=
+
+
+
+
+
+# Email Configuration (Brevo - formerly Sendinblue)
+BREVO_API_KEY=your_brevo_api_key
+EMAIL_FROM=noreply@naomi-luxe.com
+EMAIL_FROM_NAME=Naomi Luxe
 
 # Payment Configuration
 STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
